crates/toml/tests/snapshots/invalid/array/no-close-08.stderr
TOML parse error at line 1, column 16
  |
1 | no-close-08 = [
  |                ^
unclosed array, expected `]`
